<resources>
    <string name="app_name">OpenWeather</string>
    <string name="show_weather">Show Weather</string>
    <string name="feels_like_text">Чувствуется:</string>
    <string name="humidity_text">Влажность:</string>
    <string name="humidity_info">%1$d%%</string>
    <string name="wind_speed"> Скорость: %1$.1f м/с </string>
    <string name="wind_deg"> Угол: %1$d° </string>
    <string name="temperature">%1$.1f°C</string>
    <string name="weather_icon">https://openweathermap.org/img/wn/%1$s@2x.png</string>
    <string name="sunrise_text">Восход</string>
    <string name="sunset_text">Закат</string>
    <string name="error_text">Error</string>
    <string name="minsk">Minsk</string>
    <string name="weather_description">Visual Weather Description</string>
    <string name="forecast">Forecast</string>
    <string name="today">Today</string>
    <string name="min_max_temperature">%1$.1f/%2$.1f°C</string>
    <string name="isExpandedList">"isExpandedList"</string>

</resources>
